# Kalkulator-wielomianow

./: CMakeLists.txt  Makefile  README.md  a.out  kalkulator.c  kalkulator.h  main.c  wielomiany.c  wielomiany.h  wielomiany.h.gch
